--- a/giffymind-frontend/src/App.css
+++ b/giffymind-frontend/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.square {
+  margin: 5px;
+  display: inline-block;
+  border: 4px solid darkgray;
+  /* border-radius: 50%; */
+  width: 150px;
+  height: 130px;
+}
+
+.menu{
+  display: flex; 
+  justify-content: center
+}
