--- a/giffymind-frontend/src/App.css
+++ b/giffymind-frontend/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-color: #FFDC00;
+  display: flex;
+  justify-content: center;
 }
 
 .App-logo {
@@ -38,15 +41,85 @@
 }
 
 .square {
-  margin: 5px;
+  margin: 6px;
   display: inline-block;
-  border: 4px solid darkgray;
+  border: 2px solid darkgray;
   /* border-radius: 50%; */
   width: 150px;
-  height: 130px;
+  height: 180px;
 }
 
 .menu{
   display: flex; 
   justify-content: center
+}
+
+.funfont {
+  font-family: 'Lakki Reddy', sans-serif;
+  font-size: 80px;
+  color: #282c34;
+}
+
+.funfontsm {
+  font-family: 'Lakki Reddy', sans-serif;
+  font-size: 40px;
+  color: #282c34;
+  margin-top: 5%;
+}
+
+.centercontainer {
+    background-color: #FFDC00;
+    margin-top: 5%;
+    margin-bottom: 800px;
+}
+
+input[type=text] {
+  border: 5px solid #282c34;
+  border-radius: 10px;
+  width: 80%;
+  height: 2.5em;
+  text-align: center;
+  font-size: 20px;
+}
+
+.somespace {
+  padding-right: 20px;
+}
+
+/* Create two unequal columns that floats next to each other */
+.column {
+  float: left;
+  padding: 10px;
+}
+
+.left {
+  width: 75%;
+}
+
+.right {
+  width: 25%;
+}
+
+.main_panel {
+  width: 1200px;
+}
+
+.small_square_container {
+  display: inline-block;
+  vertical-align: middle;
+  padding-left: 15px;
+  border-left: 1px;
+}
+
+.small_square {
+  margin: 6px;
+  display: inline-block;
+  border: 4px solid darkgray;
+  width: 80px;
+  height: 80px;
+  cursor: auto;
+}
+
+.score {
+  margin-top: 60px;
 }
