--- a/giffymind-frontend/src/App.css
+++ b/giffymind-frontend/src/App.css
@@ -45,7 +45,7 @@
   display: inline-block;
   border: 2px solid darkgray;
   /* border-radius: 50%; */
-  width: 150px;
+  width: 100%;
   height: 180px;
 }
 
